kubernetes/production/apps/default/home-assistant/app/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hass-dashboard
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: home-assistant-app
          port: 8123
      middlewares:
        - name: homeassistant-headers
  tls:
    secretName: default-certificate-secret-production
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/target: traefik.${SECRET_CLUSTER_LOCAL_DOMAIN}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hass-code.${SECRET_CLUSTER_LOCAL_DOMAIN}`)
      kind: Rule
      services:
        - name: home-assistant-code-server
          port: 12321
      middlewares:
        - name: homeassistant-headers
  tls:
    secretName: default-certificate-secret-production
